@@ -2,6 +2,8 @@ Version 1.0.5
 =============
 
 * Fix combined items not existing in inventory upon game reload.
+* Fix classic rollingball not behaving properly in rooms beyond the distance of 32 blocks.
+* Fix rollingball not killing Lara under certain movement angles.
 
 
 Version 1.0.4
